# keiba_ai

./: README.md  pyproject.toml
src/: 01_data_scraping.ipynb
src/01_data_scraping/: data_scraping_module.py  get_racedate.py  get_raceid.py  get_raceinfo.py  update_raceinfo.py
survey/: 01_data_scraping.ipynb
