[project]
name = "keiba-ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ipykernel>=6.29.5",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "matplotlib-fontja>=1.1.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "selenium>=4.33.0",
    "tqdm>=4.67.1",
]
